# dimm_program

./: .gitignore
dimm_program_ver2/: comand
dimm_program_ver2/dimm_analyzer/: README.md  pyproject.toml  setup.cfg  setup.py
dimm_program_ver2/dimm_analyzer/configs/: vmc260l_imx432.yaml
dimm_program_ver2/dimm_analyzer/docs/superpowers/plans/: 2026-06-23-readability-refactor.md
dimm_program_ver2/dimm_analyzer/docs/superpowers/specs/: 2026-06-23-readability-refactor-design.md
dimm_program_ver2/dimm_analyzer/src/dimm_analyzer/: __init__.py  _cli_support.py  _compat.py  _diagnostics.py  _frame_processing.py  _summary.py  cli.py  config.py  detection.py  dimm_math.py  exceptions.py  file_picker.py  gaussian_fit.py  input_resolver.py  models.py  orientation.py  pipeline.py  plotting.py  quality.py  report.py  roi_safety.py  ser_reader.py
dimm_program_ver2/dimm_analyzer/tests/: test_cli_picker.py  test_config.py  test_dimm_math.py  test_file_picker.py  test_gaussian_fit.py  test_input_resolver.py  test_refactor_contract.py  test_roi_safety.py  test_ser_reader.py  test_synthetic_pipeline.py
