[metadata]
name = dimm-analyzer
version = 0.1.0
description = SharpCap mono SER 動画用の DIMM 観測解析 CLI ツール。
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    photutils
    pydantic
    PyYAML
    typer
    rich

[options.extras_require]
dev =
    pytest
    ruff

[options.entry_points]
console_scripts =
    dimm-analyze = dimm_analyzer.cli:app

[options.packages.find]
where = src
